infrastructure/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecosystem-production
  labels:
    name: production
    environment: production
    app.kubernetes.io/name: ecosystem
